--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiUrl": "https://bookscatalogueapi-dicoding.azurewebsites.net/"
+  "ApiUrl": "https://subms-azure-sapta-api.azurewebsites.net/",
+  "AzureSearchService": {
+    "SearchServiceName": "booksearch-dicodings",
+    "SearchServiceQueryApiKey": "X9UtfT8aV5bfMwoaeUZxSEQiyYHEnZrJue5HduU8ojAzSeBkiveq",
+    "SearchServiceIndex": "azuresql-index"
+  }
 }
